# hyspan

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
examples/: demo.py  real_dataset_experiment.py
notebooks/: THANTD_colab.ipynb  VAE_OOD_colab.ipynb
src/algorithms/target_detection/: classic_gmm.py  classic_scm.py
src/deep_models/: ts_generation.py
src/deep_models/TSTTD/: config.yaml
src/hyspan/: __init__.py
src/hyspan/algorithms/: classic.py  utils.py
src/hyspan/algorithms/target_detection/: classic_gmm.py  classic_scm.py
src/hyspan/data/: __init__.py
src/hyspan/data/generation/: data_generator.py  distribution_estimation.py  image_generation.py  image_utils.py  utils.py
src/hyspan/deep_models/: __init__.py  blocks.py  utils.py
src/hyspan/deep_models/GMM/: Gmm.py  TorchGmm.py  __init__.py
src/hyspan/deep_models/THANTD/: __init__.py  dataset.py  detect.py  loss.py  model.py  train.py
src/hyspan/deep_models/TSTTD/: Data.py  Main.py  Model.py  Tools.py  Train_eval.py  eval_config  train_config.yaml
src/hyspan/deep_models/VAE_OOD/: __init__.py  detect.py  loss.py  model.py  train.py  whitening.py
src/hyspan/detectors/: __init__.py  base.py  gmm.py  scm.py
src/hyspan/detectors/deep/: __init__.py
src/hyspan/experiments/: __init__.py  runner.py
src/hyspan/plots/: __init__.py
src/hyspan/results/: __init__.py  metrics.py  store.py
src/hyspan/synthesis/: __init__.py  engine.py
