[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyspan"
version = "0.1.0"
description = "Deep learning models for hyperspectral image analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.0",       # NumPy 1.26 is the first version to fully support Python 3.12
    "torch>=2.1.2",
    "scikit-image>=0.22.0", # Updated for Py3.12 compatibility
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.2",
    "PyYAML>=6.0.1",
    "einops>=0.7.0",
    "tqdm>=4.65.0"
]

[[project.authors]]
name = "Michael Pirogovsky"

# This is the crucial part for your directory structure
[tool.setuptools.packages.find]
where = ["src"]
